# armour-dev

./: .gitignore  .gitmodules  .~lock.millionNodes.csv#  Debug_Kinova_Force_RT_1  README.md  index.html
Legacy_Code/kinova_src/: initialize.m
figures/: HardwareFinalScreenshot_v1.bmp.xmp
kinova_src/: README.md  initialize.m  kinova_test_folder_path.mat
kinova_src/kinova_simulator_interfaces/: kinova_grasp_world_static.m  kinova_world_static.m  simulator_armtd.m  uarmtd_agent.m  uarmtd_nominal_passivity_LLC.m  uarmtd_planner.asv  uarmtd_planner.m  uarmtd_planner_ee_cost.m  uarmtd_robust_CBF_LLC.m
kinova_src/kinova_simulator_interfaces/kinova_planner_realtime/: BufferPath.h  CMakeLists.txt  CollisionChecking.cu  CollisionChecking.h  Dynamics.cpp  Dynamics.cu  Dynamics.h  FastCollisionChecking.cu  FastCollisionChecking.h  FetchInfo.h  Headers.h  KinovaFixedGripperInfo.h  KinovaForceHardwareInfo.h  KinovaForceInfo.h  KinovaInfo.h  KinovaWithoutGripperInfo.h  NLPclass.cu  NLPclass.h  NLPclassARMOUR.cu  NLPclassARMOUR.h  PZ_tests.cpp  PZ_tests.cu  PZsparse.cpp  PZsparse.cu  Parameters.h  ParametersForce.h  README.md  ReachsetsPath.h  Trajectory.cpp  Trajectory.cu  Trajectory.h  armour_main  armour_main.cpp  armour_main.cu  armour_main_pybind.cpp  armour_main_pybind.cu  callgrind.out.329627  collision_checker.cu  compile.sh  compile_collision_checker.sh  (+14 more)
kinova_src/kinova_simulator_interfaces/kinova_planner_realtime/buffer/: armour.in  armour.out  armour_constraints.out  armour_control_input_radius.out  armour_joint_position_center.out  armour_joint_position_radius.out  armour_wrench_values.out
kinova_src/scripts/: AddFKtoGraph.m  AddInfoToGraph.m  BuildAdjacency  BuildAdjacency.cpp  Des_Traj_Saver.m  Joint_PVA.fig  (+60 more)
(+1105 files in other folders)
